--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+     <meta charset="utf-8">
+     <title>Delani-studio</title>
+      <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
+      <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <script src="js/scripts.js"></script>
+    </head>
+
+    <body>
+        <div class="container-fluid"></div>
+            <div class="Welcome">
+                <div class="col-md-12" id="Welcome">
+                    <img src="" alt="">
+
+
+                
+                </div>
+            </div>
+        </div>
+    </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
