--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
      <meta charset="utf-8">
-     <title>Delani-studio</title>
+     <title>Delani-Studio</title>
       <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
       <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
       <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -15,7 +15,7 @@
         <div class="container-fluid"></div>
             <div class="Welcome">
                 <div class="col-md-12" id="Welcome">
-                    <img src="" alt="">
+                    <img src="logo/logo.png" alt="Delani studio logo">
 
 
                 
