Add new image and h3

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
             <div class="Welcome">
                 <div class="col-md-12" id="Welcome">
                     <img src="logo/logo.png" alt="Delani studio logo">
-
-
-                
+                    <h3>WELCOME</h3>
+                    <h3>TO DELANI STUDIO</h3>
+                    <h5>AMAZING PEOPLE MAKING AMAZING DESIGNES IN A FUN ENVIRONMENT</h5>
                 </div>
+              <div id="mouse">
+                  <img src="Mouse-image/mouse_click.png" alt="Mouse-image -icon">
+              </div>
             </div>
         </div>
     </body>
