--- a/index.html
+++ b/index.html
@@ -10,35 +10,78 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="js/scripts.js"></script>
     </head>
-
     <body>
-        <div class="container-fluid"></div>
+        <div class="container-fluid">
             <div class="Welcome">
-                <div class="col-md-12" id="Welcome">
-                    <img src="logo/logo.png" alt="Delani studio logo">
+                <div class="col-md-12" id="welcome">
+                    <img src="/logo/logo.png" alt="Delani-logo">
                     <h3>WELCOME</h3>
                     <h3>TO DELANI STUDIO</h3>
-                    <h5>AMAZING PEOPLE MAKING AMAZING DESIGNES IN A FUN ENVIRONMENT</h5>
+                    <h5>AMAZING PEPOLE MAKING DESIGNS IN A FUN ENVIRONMENT</h5>
                 </div>
-              <div id="mouse">
-                  <img src="Mouse-image/mouse_click.png" alt="Mouse-image -icon">
-              </div>
+                <div id="mouse">
+                    <img src="Mouse-image/mouse_click.png" alt="An image of a mouse icon">
+                </div>
+            </div>
+            <div class="aboutus">
+                <div class="col-md-12">
+                    <h2>ABOUT US</h2>
+                    <P>When you work with us, you are part of a team commited collaborators. All aspects of our software development process are intergrated, interactive</P>
+                    <p>and agile. </P>
+                    <p>Our approach unifies design, development and product management to create exceptional products.</p>
+                    <p>We start each project by understanding your business goals, the user needs and the product requirements.</p>
+                    <p>We help translate them into active and elegant solutions.</p>
+            </div>
+        </div>
+        <div class="services">
+            <div class="col-md-12">
+                <h2>SERVICES</h2>
+                  <p>Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vission. </p>
+                  <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+                  <p>based on your requirements, we can provide a comlete offering or just the piece you need.</p>
+            </div> 
+            <div class="container toggle">
+                <h2>WHAT WE DO</h2>
+                <br>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="what-we-do" id="des">
+                            <img src="service-icons/design_icon.png" alt="design_service_icon">
+                            <p>DESIGN</p>
+                        </div>
+                        <div class="des text">
+                            <h2>Design</h2>
+                            <p>Our design practice officers a full range of servces including brand strategy, interaction and visual design and user experience testing</p>
+                            <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="what-we-do" id="dev">
+                            <img src="service-icons/dev_icon.png" alt="Development service icon">
+                            <p>DEVELOPMENT</p>
+                        </div>
+                        <div class="dev text">
+                            <h2>Development</h2>
+                            <p>All engineers are fluent in the latest enterprise, mobile and web technlogies</p>
+                            <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="what-we-do" id="prod">
+                            <img src="service-icons/product_icon.png" alt="Product service icon">
+                            <p>PRODUCT MANAGEMENT</p>
+                        </div>
+                        <div class="prod text">
+                            <h2>Product Management</h2>
+                            <p>Planning and development is iterative.Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
 
-
-
-
-
-
-
-
-
-
-
-
-
+   
 
 
 
