Add html insertions

--- a/index.html
+++ b/index.html
@@ -78,12 +78,80 @@
                     </div>
                 </div>
             </div>
+            <div class="container portfolio">
+                <h2>PORTFOLIO</h2>
+                <div class="row prfolio" >
+                    <div class="col-md-3">
+                        <img src="portfolio/work4.jpg" alt="Dark" class="image one">
+                        <p class="overlay" id="one">LUCY CHEN</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="portfolio/work3.jpg" alt="ontario" class="image two">
+                        <p class="overlay" id="two">ONTARIO SECURITY</p>
+                    </>
+                    <div class="col-md-3">
+                        <img src="portfolio/work2.jpg" alt="golden scape" class="image 3">
+                        <p class="overlay" id="three">GOLDEN SCAPE ESTATES</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="portfolio/work1.jpg" alt="jim" class="image four">
+                        <p class="overlay" id="four">JIM CARREY</p>
+                    </div>
+                    <div class="row prfolio">
+                        <div class="col-md-3">
+                            <img src="portfolio/work5.jpg" alt="elena" class="image five">
+                            <p class="overlay" id="five">ELENA PORTFOLIO</p>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="portfolio/work6.jpg" alt="Wordpress" class="image six">
+                            <p class="overlay" id="six">WORDPRESS TOOLTIP</p>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="portfolio/work7.jpg" alt="burned logo" class="image seven">
+                            <p class="overlay" id="seven">BURNED LOGO MOCKUP</p>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="portfolio/work8.jpg" alt="giraffe" class="image 8">
+                            <p class="overlay" id="eight">GIRAFFE RESTAURANT</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container-fluid contactus">
+                    <h2>CONTACT US</h2>
+                    <form id="feedback">
+                        <div class="head">
+                            <input type="text" id="name" name="name" placeholder="name" size="30">
+                            <input type="email" id="email" placeholder="email" size="30" >
+                        </div>
+                        <textarea id="message" cols="60" rows="8" placeholder="Your message here..."required></textarea>
+                       <div>
+                        <input type="submit" id="submit" size="15" value="SUBMIT">
+                       </div>
+                    </form>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="col-md-12">
+                    <img src="social-icons/twitter.png" alt="twitter-icon">
+                    <img src="social-icons/dribble.png" alt="dribble-icon">
+                    <img src="social-icons/facebook.png" alt="facebook-icon">
+                    <img src="Social-icons/g_plus.png" alt="g-plus-icon">
+                    <img src="Social-icons/skype.png" alt="skype-icon">
+                    <img src="Social-icons/stumble_upon.png" alt="stumble-icon">
+                    <img src="Social-icons/behance.png" alt="behance-icon">
+                    <img src="Social-icons/pinterest.png" alt="pinterest-icon">
+                    <img src="social-icons/flickr.png" alt="flickr-icon">
+                    <div class="foot-text">
+                        <h5>
+                            <sub>DELANI STUDIO</sub>
+                        </h5>
+                        <h6>
+                            <sub>2020</sub>
+                        </h6>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
-
-   
-
-
-
-
 </html>
