Add delani logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="Welcome">
                 <div class="col-md-12" id="welcome">
-                    <img src="/logo/logo.png" alt="Delani-logo">
+                    <img src="logo/logo.png" alt="Delani-logo">
                     <h3>WELCOME</h3>
                     <h3>TO DELANI STUDIO</h3>
                     <h5>AMAZING PEPOLE MAKING DESIGNS IN A FUN ENVIRONMENT</h5>
@@ -147,7 +147,7 @@
                             <sub>DELANI STUDIO</sub>
                         </h5>
                         <h6>
-                            <sub>2020</sub>
+                            <sub>2019</sub>
                         </h6>
                     </div>
                 </div>
