--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                     <p>Our approach unifies design, development and product management to create exceptional products.</p>
                     <p>We start each project by understanding your business goals, the user needs and the product requirements.</p>
                     <p>We help translate them into active and elegant solutions.</p>
+                </div>
             </div>
-        </div>
-        <div class="services">
-            <div class="col-md-12">
+            <div class="services">
+                <div class="col-md-12">
                   <h2>SERVICES</h2>
                   <p>Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vission. </p>
                   <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
                   <p>based on your requirements, we can provide a comlete offering or just the piece you need.</p>
-            </div>
-        </div> 
-            <div class="container toggle">
+                </div>
+            </div> 
+            <div class="container-toggle">
                 <h2>WHAT WE DO</h2>
                 <br>
                 <div class="row">
@@ -79,9 +79,9 @@
                     </div>
                 </div>
             </div>
-            <div class="container portfolio">
-             <h2>PORTFOLIO</h2>
-                <div class="row prfolio" >
+                <div class="container portfolio">
+                  <h2>PORTFOLIO</h2>
+                  <div class="row prfolio" >
                     <div class="col-md-3">
                         <img src="portfolio/work4.jpg" alt="Dark" class="image one">
                         <p class="overlay" id="one">LUCY CHEN</p>
@@ -122,8 +122,8 @@
                     <h2>CONTACT US</h2>
                     <form id="feedback">
                         <div class="head">
-                            <input type="text" id="name" name="name" placeholder="name" size="30">
-                            <input type="email" id="email" placeholder="email" size="30" >
+                            <input type="text" id="name" name="name" placeholder="Name" size="30">
+                            <input type="email" id="email" placeholder="Email" size="30" >
                         </div>
                         <textarea id="message" cols="60" rows="8" placeholder="Your message here..."required></textarea>
                        <div>
@@ -154,5 +154,8 @@
                 </div>
             </div>
         </div>
+        <script src="js/jquery.js">
+            
+        </script>
     </body>
 </html>
