Add CSS file to document

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <p>based on your requirements, we can provide a comlete offering or just the piece you need.</p>
             </div>
         </div> 
-            <div class="container toggle">
+            <div class="container-toggle">
                 <h2>WHAT WE DO</h2>
                 <br>
                 <div class="row">
@@ -50,7 +50,7 @@
                             <img src="service-icons/design_icon.png" alt="design_service_icon">
                             <p>DESIGN</p>
                         </div>
-                        <div class="des text">
+                        <div class="text">
                             <h2>Design</h2>
                             <p>Our design practice officers a full range of servces including brand strategy, interaction and visual design and user experience testing</p>
                             <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
@@ -61,7 +61,7 @@
                             <img src="service-icons/dev_icon.png" alt="Development service icon">
                             <p>DEVELOPMENT</p>
                         </div>
-                        <div class="dev text">
+                        <div class="text">
                             <h2>Development</h2>
                             <p>All engineers are fluent in the latest enterprise, mobile and web technlogies</p>
                             <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -72,7 +72,7 @@
                             <img src="service-icons/product_icon.png" alt="Product service icon">
                             <p>PRODUCT MANAGEMENT</p>
                         </div>
-                        <div class="prod text">
+                        <div class="text">
                             <h2>Product Management</h2>
                             <p>Planning and development is iterative.Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve</p>
                         </div>
