Add service background Image

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="what-we-do" id="des">
-                            <img src="service-icons/design_icon.png" alt="design_service_icon">
+                            <img id="des1" src="service-icons/design_icon.png" alt="design_service_icon">
                             <p>DESIGN</p>
                         </div>
-                        <div class="text">
+                        <div class="text-1">
                             <h2>Design</h2>
                             <p>Our design practice officers a full range of servces including brand strategy, interaction and visual design and user experience testing</p>
                             <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
@@ -58,10 +58,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="what-we-do" id="dev">
-                            <img src="service-icons/dev_icon.png" alt="Development service icon">
+                            <img id="dev1" src="service-icons/dev_icon.png" alt="Development service icon">
                             <p>DEVELOPMENT</p>
                         </div>
-                        <div class="text">
+                        <div class="text-2">
                             <h2>Development</h2>
                             <p>All engineers are fluent in the latest enterprise, mobile and web technlogies</p>
                             <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -69,19 +69,19 @@
                     </div>
                     <div class="col-md-4">
                         <div class="what-we-do" id="prod">
-                            <img src="service-icons/product_icon.png" alt="Product service icon">
+                            <img id="prod1" src="service-icons/product_icon.png" alt="Product service icon">
                             <p>PRODUCT MANAGEMENT</p>
                         </div>
-                        <div class="text">
+                        <div class="text-3">
                             <h2>Product Management</h2>
                             <p>Planning and development is iterative.Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container portfolio">
+            <div class="container-portfolio">
              <h2>PORTFOLIO</h2>
-                <div class="row prfolio" >
+                <div class="row-prfolio1" >
                     <div class="col-md-3">
                         <img src="portfolio/work4.jpg" alt="Dark" class="image one">
                         <p class="overlay" id="one">LUCY CHEN</p>
@@ -97,8 +97,8 @@
                     <div class="col-md-3">
                         <img src="portfolio/work1.jpg" alt="jim" class="image four">
                         <p class="overlay" id="four">JIM CARREY</p>
-                    </div>
-                    <div class="row prfolio">
+                </div>
+                <div class="row-prfolio2">
                         <div class="col-md-3">
                             <img src="portfolio/work5.jpg" alt="elena" class="image five">
                             <p class="overlay" id="five">ELENA PORTFOLIO</p>
