Comment out Delani studio html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -47,38 +47,38 @@
             <h2>PORTFOLIO</h2>
            <div class="row1">
                <div id="col-md-3">
-                   <img src="portfolio/work4.jpg" alt="grey">
-                   <p>LUCY CHEN</p>
+                   <img src="portfolio/work4.jpg" alt="grey" class="images">
+                   <p class="overlay">LUCY CHEN</p>
                </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work3.jpg" alt="ONTARIO">
-                    <P>ONTARIO SECURITY</P>
+                    <img src="portfolio/work3.jpg" alt="ONTARIO" class="images">
+                    <P class="overlay">ONTARIO SECURITY</P>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work2.jpg" alt="GRADIENT">
-                    <P>GOLDEN SCAPES ESTATES</P>
+                    <img src="portfolio/work2.jpg" alt="GRADIENT" class="images">
+                    <P class="overlay">GOLDEN SCAPES ESTATES</P>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work1.jpg" alt="GREY jim carrey">
-                    <p>JIM CARREY</p>
+                    <img src="portfolio/work1.jpg" alt="GREY jim carrey" class="images">
+                    <p class="overlay">JIM CARREY</p>
                 </div>
            </div>
            <div class="row2">
                 <div id="col-md-3">
-                    <img src="portfolio/work5.jpg" alt="GOOD">
-                    <p>GOOD DAY</p>
+                    <img src="portfolio/work5.jpg" alt="GOOD" class="images">
+                    <p class="overlay">GOOD DAY</p>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work6.jpg" alt="RADIO">
-                    <p>RADIO</p>
+                    <img src="portfolio/work6.jpg" alt="RADIO" class="images">
+                    <p class="overlay">RADIO</p>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work7.jpg" alt="">
-                    <p>BURNED</p>
+                    <img src="portfolio/work7.jpg" alt="" class="images">
+                    <p class="overlay">BURNED</p>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work8.jpg" alt="Bailey wonger">
-                    <p>BAILEY WONGER</p>
+                    <img src="portfolio/work8.jpg" alt="Bailey wonger" class="images">
+                    <p class="overlay">BAILEY WONGER</p>
                 </div>
            </div>
         </div>
@@ -96,105 +96,7 @@
             </form>
         </div>
     </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</html>-->
 <!--<!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
