--- a/index.html
+++ b/index.html
@@ -1,3 +1,135 @@
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="specifically descrpitive content about your page here">
+    <!--scripts here-->
+    <script src="script.js"></script>
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=yourfonthere" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Germania+One" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
+    <title>Delani-Studio</title>
+</head>
+
+<body>
+    <!-- begin page content -->
+    <div class="header">
+        <img src="logo/logo.png" alt="Capital D enclosed in a circle">
+        <h1>WELCOME<br> TO DELANI STUDIO </h1>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT </p>
+        <div class="image">
+            <img src="Mouse-image/mouse_click.png" alt="a picture of a mouse">
+        </div>
+    </div>
+    <div class="about-us">
+        <h2>ABOUT US</h2>
+        <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development
+            prcessare intergrated, interactive<br> and agile.<br>Our approach unifies design, development and product
+            management to create exeptional products.<br>We asart each project by understanding your business goals, the
+            user's needs and product requirements<br> Then we help transform them into effective and elegant solutions.</p>
+    </div>
+    <div class="services">
+        <h2>SERVICES</h2>
+        <p>Before we sign a contract or write a line of code our team will spend necessary time needed to understand your
+            product vision<br> The purpose of this scoping session is proposal or high-level statement of work.<br> based on
+            your requiremets we can provide a complete offering or just pieces for you. </p>
+    </div>
+    <div class="what-we-do">
+        <h2>WHAT WE DO</h2>
+        <div class="wwd">
+            <div class="des">
+                <img src="service-icons/design_icon.png" alt="pen">
+                <P>DESIGN</P>
+            </div>
+            <div class="dev">
+                <img src="service-icons/dev_icon.png" alt="dev_icon">
+                <P>DEVELOPMENT</P>
+            </div>
+            <div class="prod">
+                <img src="service-icons/product_icon.png" alt="prod">
+                <p>PRODUCT MANAGEMENT</p>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio">
+        <h2>PORTFOLIO</h2>
+        <div class="row1">
+            <div id="col-md-3">
+                <img src="portfolio/work4.jpg" alt="grey" class="images">
+                <p class="overlay">LUCY CHEN</p>
+            </div>
+            <div id="col-md-3">
+                <img src="portfolio/work3.jpg" alt="ONTARIO" class="images">
+                <P class="overlay">ONTARIO SECURITY</P>
+            </div>
+            <div id="col-md-3">
+                <img src="portfolio/work2.jpg" alt="GRADIENT" class="images">
+                <P class="overlay">GOLDEN SCAPES ESTATES</P>
+            </div>
+            <div id="col-md-3">
+                <img src="portfolio/work1.jpg" alt="GREY jim carrey" class="images">
+                <p class="overlay">JIM CARREY</p>
+            </div>
+        </div>
+        <div class="row2">
+            <div id="col-md-3">
+                <img src="portfolio/work5.jpg" alt="GOOD" class="images">
+                <p class="overlay">GOOD DAY</p>
+            </div>
+            <div id="col-md-3">
+                <img src="portfolio/work6.jpg" alt="RADIO" class="images">
+                <p class="overlay">RADIO</p>
+            </div>
+            <div id="col-md-3">
+                <img src="portfolio/work7.jpg" alt="" class="images">
+                <p class="overlay">BURNED</p>
+            </div>
+            <div id="col-md-3">
+                <img src="portfolio/work8.jpg" alt="Bailey wonger" class="images">
+                <p class="overlay">BAILEY WONGER</p>
+            </div>
+        </div>
+    </div>
+    <div class="contact-us">
+        <h2>CONTACT US</h2>
+        <form id="feedback">
+            <div class="head"> <input type="text" id="name" name="name" placeholder="Name" size="40">
+                <input type="email" id="email" placeholder="Email" size="40"><br>
+            </div>
+            <br>
+            <textarea id="message" cols="80" rows="15" placeholder="Your message here..." required></textarea>
+            <div>
+                <input type="submit" id="submit" size="15" value="SUBMIT">
+            </div>
+        </form>
+    </div>
+    <!--END PAGEWRAP-->
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--<!DOCTYPE html>
 <html>
     <head>
