Add changes to portfolio class

--- a/index.html
+++ b/index.html
@@ -86,54 +86,57 @@
             <h2>PORTFOLIO</h2>
             <div class="row">
                     <div id="col-md-3">
-                        <img src="portfolio/work4.jpg" alt="grey" class="images" height="200px" width="200px">
+                        <img src="portfolio/work4.jpg" alt="grey" class="images" height="250px" width="250px">
                         <p class="overlay">LUCY CHEN</p>
                     </div>
                     <div id="col-md-3">
-                        <img src="portfolio/work3.jpg" alt="ONTARIO" class="images" height="200px" width="200px">
+                        <img src="portfolio/work3.jpg" alt="ONTARIO" class="images" height="250px" width="250px">
                         <P class="overlay">ONTARIO SECURITY</P>
                     </div>
                     <div id="col-md-3">
-                        <img src="portfolio/work2.jpg" alt="GRADIENT" class="images" height="200px" width="200px">
+                        <img src="portfolio/work2.jpg" alt="GRADIENT" class="images" height="250px" width="250px">
                         <P class="overlay">GOLDEN SCAPES ESTATES</P>
                     </div>
                     <div id="col-md-3">
-                        <img src="portfolio/work1.jpg" alt="GREY jim carrey" class="images" height="200px" width="200px">
+                        <img src="portfolio/work1.jpg" alt="GREY jim carrey" class="images" height="250px" width="250px">
                         <p class="overlay">JIM CARREY</p>
                     </div>
                 </div>
             <div class="row">
                 <div id="col-md-3">
-                    <img src="portfolio/work5.jpg" alt="GOOD" class="images" height="200px" width="200px">
+                    <img src="portfolio/work5.jpg" alt="GOOD" class="images" height="250px" width="250px">
                     <p class="overlay">GOOD DAY</p>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work6.jpg" alt="RADIO" class="images" height="200px" width="200px">
+                    <img src="portfolio/work6.jpg" alt="RADIO" class="images" height="250px" width="250px">
                     <p class="overlay">RADIO</p>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work7.jpg" alt="" class="images" height="200px" width="200px">
+                    <img src="portfolio/work7.jpg" alt="" class="images" height="250px" width="250px">
                     <p class="overlay">BURNED</p>
                 </div>
                 <div id="col-md-3">
-                    <img src="portfolio/work8.jpg" alt="Bailey wonger" class="images" height="200px" width="200px">
+                    <img src="portfolio/work8.jpg" alt="Bailey wonger" class="images" height="250px" width="250px">
                     <p class="overlay">BAILEY WONGER</p>
                 </div>
             </div>
         </div>
-        <div class="contact-us">
-            <h2>CONTACT US</h2>
-            <form id="feedback">
-                <div class="head"> <input type="text" id="name" name="name" placeholder="Name" size="40">
-                    <input type="email" id="email" placeholder="Email" size="40"><br>
-                </div>
+
+        <div class="container-4">
+            <div class="contact-us">
+                <h2>CONTACT US</h2>
+                <form id="feedback">
+                    <div class="head"> <input type="text" id="name" name="name" placeholder="Name" size="40">
+                        <input type="email" id="email" placeholder="Email" size="40"><br>
+                    </div>
                     <br>
-                    <textarea id="message" cols="80" rows="15" placeholder="Your message here..." required></textarea>
-                <div>
-                    <input type="submit" id="submit" size="15" value="SUBMIT">
-                </div>
-            </form>
-        </div>
+                        <textarea id="message" cols="80" rows="15" placeholder="Your message here..." required></textarea>
+                    <div>
+                        <input type="submit" id="submit" size="15" value="SUBMIT">
+                    </div>
+                </form>
+            </div>
+        </div>    
         <!--END PAGEWRAP-->
     </body>
 </html>
