--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <!-- begin page content -->
-        <div class="container-1">
+        <div class="container-fluid-1">
             <div class="header"><br>
                 <img src="logo/logo.png" alt="Capital D enclosed in a circle"><br>
                 <h1>WELCOME<br> TO DELANI STUDIO </h1><br>
@@ -30,7 +30,7 @@
         
         <br>
         <br>
-        <div class="container-2">   
+        <div class="container-fluid-2">   
             <div class="about-us">
                 <h2>ABOUT US</h2>
                 <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development
@@ -41,7 +41,7 @@
         </div>
 
 
-        <div class="container-3">
+        <div class="container-fluid-3">
             <div class="services">
                 <h2>SERVICES</h2>
                 <p>Before we sign a contract or write a line of code our team will spend necessary time needed to understand your
@@ -51,10 +51,10 @@
         </div>
 
 
-        <div class="container-fluid">
+        <div class="container-fluid-5">
             <div class="what-we-do">
+                <h2>WHAT WE DO</h2>
                 <div class="row">
-                    <h2>WHAT WE DO</h2>
                     <div class="wwd">
                         <div class="des">
                             <img src="service-icons/design_icon.png" alt="pen">
@@ -82,7 +82,7 @@
         </div>
 
 
-        <div class="container-portfolio">
+        <div class="container-fluid-6">
             <h2>PORTFOLIO</h2>
             <div class="row">
                     <div id="col-md-3">
@@ -122,9 +122,10 @@
             </div>
         </div>
 
-        <div class="container-4">
+        <div class="container-fluid-7">
+            <h2>CONTACT US</h2>
             <div class="contact-us">
-                <h2>CONTACT US</h2>
+                
                 <form id="feedback">
                     <div class="head"> <input type="text" id="name" name="name" placeholder="Name" size="40">
                         <input type="email" id="email" placeholder="Email" size="40"><br>
