Add footer with icons

--- a/index.html
+++ b/index.html
@@ -137,7 +137,26 @@
                     </div>
                 </form>
             </div>
-        </div>    
+        </div> 
+        
+        <div class="container-fluid-8">
+            <div class="footer">
+                <div class="social-icons">
+                    <img src="Social-icons/twitter.png" alt="twitter-icon"> 
+                    <img src="Social-icons/dribble.png" alt="dribble-icon">
+                    <img src="Social-icons/facebook.png" alt="facebook-icon">
+                    <img src="Social-icons/g_plus.png" alt="g-plus-icon">
+                    <img src="Social-icons/skype.png" alt="skype-icon">
+                    <img src="Social-icons/stumble_upon.png" alt="stumble_upon-icon">
+                    <img src="Social-icons/behance.png" alt="behance-icon">                          <img src="Social-icons/twitter.png" alt="twitter-icon">
+                    <img src="Social-icons/pinterest.png" alt="pinterest-icon">
+                </div>
+                <div class="footer-text">
+                    <p>DELANI STUDIO</p>
+                    <P>2019</P>
+                </div>   
+            </div>
+        </div>
         <!--END PAGEWRAP-->
     </body>
 </html>
