Add changes to entire document

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
+<!--<!DOCTYPE HTML>
 <html lang="en">
 
     <head>
         <meta charset="utf-8">
         <meta name="description" content="specifically descrpitive content about your page here">
-        <!--scripts here-->
+        scripts here
         <script src="script.js"></script>
-        <!--[if lt IE 9]>
+        [if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-        <![endif]-->
+        <![endif]
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=yourfonthere" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Germania+One" rel="stylesheet">
@@ -17,11 +17,12 @@
     </head>
 
     <body>
-        <!-- begin page content -->
+         begin page content 
         <div class="container-fluid-1">
             <div class="header"><br>
                 <img src="logo/logo.png" alt="Capital D enclosed in a circle"><br>
-                <h1>WELCOME<br> TO DELANI STUDIO </h1><br>
+                <h1>WELCOME<br> 
+                <br>TO DELANI STUDIO </h1><br>
                 <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT </p><br>
                 <div class="image">
                 <img src="Mouse-image/mouse_click.png" alt="a picture of a mouse">
@@ -58,23 +59,29 @@
                     <div class="wwd">
                         <div class="des">
                             <img src="service-icons/design_icon.png" alt="pen">
-                            <p>DESIGN</p>
-                            <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user
-                            experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit
-                            user feedback and work with you to make sure what gets built is what is needed.</p>
-                        </div>
+                            <p><strong>DESIGN</strong></p>
+                            <div class="text">
+                                <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user
+                                experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit
+                                user feedback and work with you to make sure what gets built is what is needed.</p>
+                            </div>
+                        </div>   
                         <div class="dev">
                             <img src="service-icons/dev_icon.png" alt="dev_icon">
-                            <P>DEVELOPMENT</P>
-                            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They collaborate with your
-                            team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair
-                            programming.</p>
+                            <p><strong>DEVELOPMENT</strong></p>
+                            <div class="text">
+                                <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They collaborate with your
+                                team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair
+                                programming.</p>
+                            </div>    
                         </div>
-                        <div class="prod">
-                            <img src="service-icons/product_icon.png" alt="prod">
-                            <p>PRODUCT MANAGEMENT</p>
-                            <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always
-                            ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+                        <div class="prod" >
+                            <img  src="service-icons/product_icon.png" alt="prod">
+                            <p onclick="myFunction()"><strong>PRODUCT MANAGEMENT</strong></p>
+                            <div class="text" id="myText">
+                                <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always
+                                ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+                            </div>
                         </div>
                     </div>   
                 </div>
@@ -85,7 +92,7 @@
         <div class="container-fluid-6">
             <h2>PORTFOLIO</h2>
             <div class="row">
-                    <div id="col-md-3">
+                    <div id="col-md-3" >
                         <img src="portfolio/work4.jpg" alt="grey" class="images" height="250px" width="250px">
                         <p class="overlay">LUCY CHEN</p>
                     </div>
@@ -103,22 +110,22 @@
                     </div>
                 </div>
             <div class="row">
-                <div id="col-md-3">
-                    <img src="portfolio/work5.jpg" alt="GOOD" class="images" height="250px" width="250px">
-                    <p class="overlay">GOOD DAY</p>
-                </div>
-                <div id="col-md-3">
-                    <img src="portfolio/work6.jpg" alt="RADIO" class="images" height="250px" width="250px">
-                    <p class="overlay">RADIO</p>
-                </div>
-                <div id="col-md-3">
-                    <img src="portfolio/work7.jpg" alt="" class="images" height="250px" width="250px">
-                    <p class="overlay">BURNED</p>
-                </div>
-                <div id="col-md-3">
-                    <img src="portfolio/work8.jpg" alt="Bailey wonger" class="images" height="250px" width="250px">
-                    <p class="overlay">BAILEY WONGER</p>
-                </div>
+                    <div id="col-md-3">
+                        <img src="portfolio/work5.jpg" alt="GOOD" class="images" height="250px" width="250px">
+                        <p class="overlay">GOOD DAY</p>
+                    </div>
+                    <div id="col-md-3">
+                        <img src="portfolio/work6.jpg" alt="RADIO" class="images" height="250px" width="250px">
+                        <p class="overlay">RADIO</p>
+                    </div>
+                    <div id="col-md-3">
+                        <img src="portfolio/work7.jpg" alt="" class="images" height="250px" width="250px">
+                        <p class="overlay">BURNED</p>
+                    </div>
+                    <div id="col-md-3">
+                        <img src="portfolio/work8.jpg" alt="Bailey wonger" class="images" height="250px" width="250px">
+                        <p class="overlay">BAILEY WONGER</p>
+                    </div>
             </div>
         </div>
 
@@ -159,7 +166,7 @@
         </div>
         <!--END PAGEWRAP-->
     </body>
-</html>
+</html>-->
 <!--<!DOCTYPE html>
 <html>
     <head>
