--- a/index.html
+++ b/index.html
@@ -1,3 +1,187 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+    <meta charset="utf-8">
+    <title>Delani-studio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="welcome">
+            <div class="col-md-12" id="welcome">
+                <img src="images/logo/logo.png" alt="delani-logo">
+                <h3>WELCOME</h3>
+                <h3>TO DELANI STUDIO</h3>
+                <h5>AMAZING PEOPLE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h4>
+            </div>
+            <div id="mouse">
+                <img src="images/mouse_click.png" alt="mouse-icon">
+            </div>
+        </div>
+        <div class="aboutus">
+            <div class="col-md-12">
+                <h2>ABOUT US</h2>
+                <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software
+                    development process are intergrated , interactive</p>
+                <p>and agile.</p>
+                <p>Our approach unifies design, development and product managent to create exceptional products.</p>
+                <p>We start each project by understanding your business goals, the users needs and the product
+                    requirements.</p>
+                <p>we help translate them into active and elegant solutions.</p>
+            </div>
+        </div>
+        <div class="services">
+            <div class="col-md-12">
+                <h2>SERVICES</h2>
+                <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to
+                    understand your product vission.</p>
+                <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+                <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+            </div>
+        </div>
+        <div class="container toggle">
+            <h2>WHAT WE DO</h2>
+            <br>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="what-we-do" id="design">
+                        <img src="images/servicesIcons/design.png" alt="services_icons">
+                        <p>DESIGN</p>
+                    </div>
+                    <div class="design text">
+                        <h2>Design</h2>
+                        <p>Our design practice offers a full range of services including brand strategy, interaction and
+                            visual design and user experience testing.</p>
+                        <p>Throughout your project, our designers create and implement visual design and workflows,
+                            solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="what-we-do" id="dev">
+                        <img src="images/servicesIcons/dev.png" alt="dev_icon">
+                        <p>DEVELOPMENT</p>
+                    </div>
+                    <div class="dev text">
+                        <h2>Development</h2>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                        </p>
+                        <p>They collaborate with your team to write, and improve code on a daily basis, using proven
+                            practices such as test-driven development and pair programming.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="what-we-do" id="product">
+                        <img src="images/servicesIcons/product.png" alt="product_icon">
+                        <p>PRODUCT MANAGEMENT</p>
+                    </div>
+                    <div class="product text">
+                        <h2>Product Management</h2>
+                        <p>Planning and development is iterative. Because we are constantly coding and testing, the
+                            products we build are always ready to go live. </p>
+                        <p>This iterative process allows for changes as business requirements evolve.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container portfolio">
+            <h2>PORTFOLIO</h2>
+            <div class="row folio">
+                <div class="col-md-3">
+                    <img src="images/portfolio/work4.jpg" alt="black" class="images one">
+                    <p class="overlay" id="one">LUCY CHEN</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/portfolio/work3.jpg" alt="ontario" class="images two">
+                    <p class="overlay" id="two"> ONTARIO SECURITY</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/portfolio/work2.jpg" alt="" class="images three">
+                    <p class="overlay" id="three">GOLDEN SCAPE ESTATES</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/portfolio/work1.jpg" alt="" class="images four">
+                    <p class="overlay" id="four">JIM CARREY</p>
+                </div>
+            </div>
+            <div class="row folio">
+                <div class="col-md-3">
+                    <img src="images/portfolio/work5.jpg" alt="" class="images five">
+                    <p class="overlay" id="five">ELENA PORTFOLIO</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/portfolio/work6.jpg" alt="" class="images six">
+                    <p class="overlay" id="six">WORDPRESS TOOLTIP</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/portfolio/work7.jpg" alt="" class="images seven">
+                    <p class="overlay" id="seven">BURNED LOGO MOCKUP</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/portfolio/work8.jpg" alt="" class="images eight">
+                    <p class="overlay" id="eight">GIRAFFE RESTAURANT</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid contactus">
+            <h2>CONTACT US</h2>
+            <form action="" id="feedbackform">
+                <div class="contact-head">
+                    <input id="name" name="name" type="text" placeholder="Name..." required size="30">
+                    <input name="email" type="email" placeholder="Email..." required autocapitalize="off" size="30">
+                </div>
+                <textarea name="message" id="message" cols="60" rows="8" placeholder="Your message here... "
+                    required></textarea>
+                <div>
+                    <input type="submit" id="submit" size="15" value="SUBMIT">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="col-md-12">
+            <img src="images/socialIcons/twitter.png " alt="twitter-icon ">
+            <img src="images/socialIcons/dribble.png " alt="dribble-icon ">
+            <img src="images/socialIcons/facebook.png " alt="facebook-icon ">
+            <img src="images/socialIcons/g_plus.png " alt="gplus-icon ">
+            <img src="images/socialIcons/skype.png " alt="skype-icon ">
+            <img src="images/socialIcons/stumble_upon.png " alt="stumble-upon-icon ">
+            <img src="images/socialIcons/behance.png " alt="behace-icon ">
+            <img src="images/socialIcons/pinterest.png " alt="pinterest-icon ">
+            <img src="images/socialIcons/flickr.png " alt="flickr-icon ">
+            <div class="foot-text ">
+                <h5><sub>DELANI STUDIO</sub></h5>
+                <h6><sub>2020</sub></h6>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--<!DOCTYPE HTML>
 <html lang="en">
 
