--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div class="container-fluid">
         <div class="welcome">
             <div class="col-md-12" id="welcome">
-                <img src="images/logo/logo.png" alt="delani-logo">
+                <img src="logo/logo.png" alt="delani-logo">
                 <h3>WELCOME</h3>
                 <h3>TO DELANI STUDIO</h3>
                 <h5>AMAZING PEOPLE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h4>
             </div>
             <div id="mouse">
-                <img src="images/mouse_click.png" alt="mouse-icon">
+                <img src="Mouse-image/mouse_click.png" alt="mouse-icon">
             </div>
         </div>
         <div class="aboutus">
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="what-we-do" id="design">
-                        <img src="images/servicesIcons/design.png" alt="services_icons">
+                        <img src="service-icons/design_icon.png" alt="services_icons">
                         <p>DESIGN</p>
                     </div>
                     <div class="design text">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="what-we-do" id="dev">
-                        <img src="images/servicesIcons/dev.png" alt="dev_icon">
+                        <img src="service-icons/dev_icon.png" alt="dev_icon">
                         <p>DEVELOPMENT</p>
                     </div>
                     <div class="dev text">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="what-we-do" id="product">
-                        <img src="images/servicesIcons/product.png" alt="product_icon">
+                        <img src="service-icons/product_icon.png" alt="product_icon">
                         <p>PRODUCT MANAGEMENT</p>
                     </div>
                     <div class="product text">
@@ -94,37 +94,37 @@
             <h2>PORTFOLIO</h2>
             <div class="row folio">
                 <div class="col-md-3">
-                    <img src="images/portfolio/work4.jpg" alt="black" class="images one">
+                    <img src="portfolio/work4.jpg" alt="black" class="images one">
                     <p class="overlay" id="one">LUCY CHEN</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/portfolio/work3.jpg" alt="ontario" class="images two">
+                    <img src="portfolio/work3.jpg" alt="ontario" class="images two">
                     <p class="overlay" id="two"> ONTARIO SECURITY</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/portfolio/work2.jpg" alt="" class="images three">
+                    <img src="portfolio/work2.jpg" alt="" class="images three">
                     <p class="overlay" id="three">GOLDEN SCAPE ESTATES</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/portfolio/work1.jpg" alt="" class="images four">
+                    <img src="portfolio/work1.jpg" alt="" class="images four">
                     <p class="overlay" id="four">JIM CARREY</p>
                 </div>
             </div>
             <div class="row folio">
                 <div class="col-md-3">
-                    <img src="images/portfolio/work5.jpg" alt="" class="images five">
+                    <img src="portfolio/work5.jpg" alt="" class="images five">
                     <p class="overlay" id="five">ELENA PORTFOLIO</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/portfolio/work6.jpg" alt="" class="images six">
+                    <img src="portfolio/work6.jpg" alt="" class="images six">
                     <p class="overlay" id="six">WORDPRESS TOOLTIP</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/portfolio/work7.jpg" alt="" class="images seven">
+                    <img src="portfolio/work7.jpg" alt="" class="images seven">
                     <p class="overlay" id="seven">BURNED LOGO MOCKUP</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/portfolio/work8.jpg" alt="" class="images eight">
+                    <img src="portfolio/work8.jpg" alt="" class="images eight">
                     <p class="overlay" id="eight">GIRAFFE RESTAURANT</p>
                 </div>
             </div>
@@ -147,18 +147,18 @@
     </div>
     <div class="footer">
         <div class="col-md-12">
-            <img src="images/socialIcons/twitter.png " alt="twitter-icon ">
-            <img src="images/socialIcons/dribble.png " alt="dribble-icon ">
-            <img src="images/socialIcons/facebook.png " alt="facebook-icon ">
-            <img src="images/socialIcons/g_plus.png " alt="gplus-icon ">
-            <img src="images/socialIcons/skype.png " alt="skype-icon ">
-            <img src="images/socialIcons/stumble_upon.png " alt="stumble-upon-icon ">
-            <img src="images/socialIcons/behance.png " alt="behace-icon ">
-            <img src="images/socialIcons/pinterest.png " alt="pinterest-icon ">
-            <img src="images/socialIcons/flickr.png " alt="flickr-icon ">
+            <img src="Social-icons/twitter.png" alt="twitter-icon ">
+            <img src="Social-icons/dribble.png" alt="dribble-icon ">
+            <img src="Social-icons/facebook.png" alt="facebook-icon ">
+            <img src="Social-icons/g_plus.png" alt="gplus-icon ">
+            <img src="Social-icons/skype.png " alt="skype-icon ">
+            <img src="Social-icons/stumble_upon.png " alt="stumble-upon-icon ">
+            <img src="Social-icons/behance.png" alt="behace-icon ">
+            <img src="Social-icons/pinterest.png" alt="pinterest-icon ">
+            <img src="Social-icons/flickr.png" alt="flickr-icon ">
             <div class="foot-text ">
                 <h5><sub>DELANI STUDIO</sub></h5>
-                <h6><sub>2020</sub></h6>
+                <h6><sub>2021</sub></h6>
             </div>
         </div>
     </div>
